# FormalLanguage-mipt-autumn-2022

./: .gitignore  CMakeLists.txt  README.md  main.cpp
exe/: CMakeLists.txt
exe/algorithms/Early/: Early.cpp  Early.hpp  HelperEarly.cpp  HelperEarly.hpp  Situation.cpp  Situation.hpp
exe/automation/: DeterministicAutomation.cpp  DeterministicAutomation.h  NonDeterministicAutomaton.cpp  NonDeterministicAutomaton.h
exe/grammar/: Grammar.cpp  Grammar.hpp  Rule.cpp  Rule.hpp
exe/regular/: RegularExpression.cpp  RegularExpression.h
play/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  tests.cpp
